[project]
name = "iSponsorBlockTV"
description = "SponsorBlock client for all YouTube TV clients"
readme = "README.md"
requires-python = ">=3.12"
version = "2.5.3"
authors = [{ "name" = "dmunozv04" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]
dependencies = [
    "aiohttp>=3.10",
    "pyytlounge==2.3.0",
    "ssdp==1.3.0",
    "xmltodict==0.13.0",
    "mikeshardmind-async-utils @ git+https://github.com/mikeshardmind/async-utils",
    "discord.py @ git+https://github.com/rapptz/discord.py",
]


[project.urls]
"Homepage" = "https://github.com/dmunozv04/iSponsorBlockTV"
"Bug Tracker" = "https://github.com/dmunozv04/iSponsorBlockTV/issues"

[project.scripts]
"iSponsorBlockTV" = "iSponsorBlockTV.__main__:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.pyright]
pythonVersion = "3.12"
reportIncompatibleMethodOverride = false
reportPrivateUsage = false
reportUnnecessaryIsInstance = false
reportMissingTypeStubs = false
typeCheckingMode = "strict"
exclude = ["events_handlers.py", "*venv*", "*site-packages*"]

[tool.ruff]
line-length = 125
target-version = "py312"
preview = true
exclude = ["events_handlers.py", "*venv*", "*site-packages*"]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "COM",
    "D",
    "DOC",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FA",
    "FBT",
    "FURB",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "LOG",
    "NPY",
    "PD",
    "PERF",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "PYI",
    "Q",
    "Q003",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLOT",
    "T20",
    "TC",
    "TID",
    "TRY",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "ANN202",   # implied return fine sometimes
    "ANN401",   # Any is the correct type in some cases
    "ASYNC116", # Long sleeps are fine
    "B901",     # I'm aware of how generators as coroutines work
    "C90",      # mccabe complexity memes
    "COM812",   # ruff format suggested
    "D100",     # no, module level docs aren't always neededd
    "D105",     # documenting magic methods is often dumb.
    "D107",     # __init__ is the wrong place to doc this.
    "E501",     # ruff format suggested
    "FBT003",   # Wrong end to enforce this on.
    "G002",     # erroneous issue with %-logging when logging can be confiured for % logging
    "ISC001",   # ruff format suggested
    "PLC0105",  # no, I don't like co naming style for typevars
    "PLC0415",  # ruff gets this wrong, import needs to be not at top of file in some cases
    "PLR0912",  # too many branches
    "PLR0913",  # number of function arguments
    "PLR0915",  # too many statements.... in an async entrypoint handling graceful shutdown...
    "PLR0917",  # too many positional arguments
    "PLR2004",  # Magic value comparison, may remove later
    "RUF001",   # ambiguous characters not something I want to enforce here.
    "RUF029",   # no, don't try andd tell me I'm wrong for async def when something is for an interface.
    "S101",     # use of assert here is a known quantity, blame typing memes
    "S311",     # Yes, I know that standard pseudo-random generators are not suitable for cryptographic purposes
    "SIM105",   # supressable exception, I'm not paying the overhead of contextlib.supress for stylistic choices.
    "TC001",    # I prefer to avoid if TYPE_CHECKING
    "TC002",    # I prefer to avoid if TYPE_CHECKING
    "TC003",    # I prefer to avoid if TYPE_CHECKING
    "UP007",    # "Use | For Union" doesn't account for typevar tuple unpacking.
    "UP031",    # No, I like % formatting more for some things...
    "UP038",    # isinstance on union types... perf + type construct symmetry issues.
    # As PYI058 modifies return values to be more narrow than they actually are
    "PYI058",  # This opinionated "fix" causes incompatabilties with things expecting a generator.
    "D101",    # Missing docstring in public class doesn't matter for this personal project
    "D102",    #  Missing docstring in public method doesn't matter for this personal project
    "ERA001",  #  Found commented-out code, don't delete it
    "F403",    #  unable to detect undefined names, don't care
    "F405",    # may be undefined, or defined from star imports, don't care
    "DOC201",  # `return` is not documented in docstring, don't care
    "D104",    # Missing docstring in public package, don't care
    "D103",    # Missing docstring in public fubctuib, don't care
    "PLR6301", # Method ould be a function, class method, or static method, don't care

]
unfixable = [
    "E501", # line length handled in other ways by ruff format
    "ERA",  # Don't delete commented out code
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-import-conventions.aliases]
"concurrent.futures" = "cf"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
# https://discuss.python.org/t/problems-with-typeis/55410/6
# https://discuss.python.org/t/problems-with-typeis/55410/46
# Until what can go into a TypeIs/TypeGuard changes, these are just dangerous.

"typing.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing.TypeGuard".msg = "TypeGuard is fundamentally unsafe"
"typing_extensions.TypeIs".msg = "TypeIs is fundamentally unsafe, even when using it as described to be safe"
"typing_extensions.TypeGuard".msg = "TypeGuard is fundamentally unsafe"
"typing.runtime_checkable".msg = "Runtime checkable is fundamentally unsafe."
"typing_extensions.runtime_checkable".msg = "Runtime checkable is fundamentally unsafe."

# these don't work as deferred imports, intentionally, because type checkers are dumb
# and require they be imported directly from typing to work, this breaks the deferred re-export.
"typing.Final".msg = "see https://github.com/microsoft/pyright/issues/9664#issuecomment-2574042580"
"typing_extensions.Final".msg = "see https://github.com/microsoft/pyright/issues/9664#issuecomment-2574042580"
"typing.final".msg = "see https://github.com/microsoft/pyright/issues/9664#issuecomment-2574042580"
"typing_extensions.final".msg = "see https://github.com/microsoft/pyright/issues/9664#issuecomment-2574042580"


[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
length-sort = true
length-sort-straight = true

section-order = [
    "future",
    "futureXtyping",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

no-lines-before = ["futureXtyping"]

[tool.ruff.lint.isort.sections]
"futureXtyping" = [
    "__future__",
    "typing",
    "typing_extensions",
    "collections.abc",
]
